new(falco): add `output_timeout` configuration setting
See https://github.com/falcosecurity/falco/pull/1451

Signed-off-by: Leonardo Grasso <me@leonardograsso.com>

--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -161,6 +161,23 @@ falco:
     rate: .03333
     maxBurst: 10
 
+  # Falco continuously monitors outputs performance. When an output channel does not allow
+  # to deliver an alert within a given deadline, an error is reported indicating
+  # which output is blocking notifications.
+  # The timeout error will be reported to the log according to the above log_* settings.
+  # Note that the notification will not be discarded from the output queue; thus,
+  # output channels may indefinitely remain blocked.
+  # An output timeout error indeed indicate a misconfiguration issue or I/O problems
+  # that cannot be recovered by Falco and should be fixed by the user.
+  #
+  # The "output_timeout" value specifies the duration in milliseconds to wait before
+  # considering the deadline exceed.
+  #
+  # With a 2000ms default, the notification consumer can block the Falco output
+  # for up to 2 seconds without reaching the timeout.
+
+  output_timeout: 2000
+
   # A throttling mechanism implemented as a token bucket limits the
   # rate of Falco notifications. This throttling is controlled by the following configuration
   # options:
