--- a/tests/ct.yaml
+++ b/tests/ct.yaml
@@ -4,6 +4,6 @@ target-branch: master
 chart-repos:
   - stable=https://charts.helm.sh/stable
   - falcosecurity=https://falcosecurity.github.io/charts
-helm-extra-args: --timeout 800
+helm-extra-args: --timeout 800s
 chart-dirs:
   - .
