--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -45,6 +45,7 @@ data:
 
   # Datadog Output
   DATADOG_APIKEY: "{{ .Values.config.datadog.apikey | b64enc }}"
+  DATADOG_HOST: "{{ .Values.config.datadog.host | b64enc }}"
   DATADOG_MINIMUMPRIORITY: "{{ .Values.config.datadog.minimumpriority | b64enc }}"
 
   # AlertManager Output
@@ -154,7 +155,7 @@ data:
   PAGERDUTY_ASSIGNEE: "{{ .Values.config.pagerduty.assignee | b64enc }}"
   PAGERDUTY_ESCALATION_POLICY: "{{ .Values.config.pagerduty.escalationpolicy | b64enc }}"
   PAGERDUTY_MINIMUMPRIORITY: "{{ .Values.config.pagerduty.minimumpriority | b64enc }}"
-  
+
   # Kubeless Output
   KUBELESS_FUNCTION: "{{ .Values.config.kubeless.function | b64enc }}"
   KUBELESS_NAMESPACE: "{{ .Values.config.kubeless.namespace | b64enc }}"
