Add option to add --disable-cri-sync flag
Signed-off-by: Annegies van 't Zand <ace.vtzand@gmail.com>

--- a/falco/templates/daemonset.yaml
+++ b/falco/templates/daemonset.yaml
@@ -64,6 +64,9 @@ spec:
             - --cri
             - /run/containerd/containerd.sock
             {{- end }}
+            {{- if .Values.falco.disableCriAsync }}
+            - --disable-cri-async
+            {{- end }}
             - -K
             - /var/run/secrets/kubernetes.io/serviceaccount/token
             - -k
