Rename disableCriAsync => disableCRIAsync
Signed-off-by: Annegies van 't Zand <ace.vtzand@gmail.com>

--- a/falco/templates/daemonset.yaml
+++ b/falco/templates/daemonset.yaml
@@ -64,7 +64,7 @@ spec:
             - --cri
             - /run/containerd/containerd.sock
             {{- end }}
-            {{- if .Values.falco.disableCriAsync }}
+            {{- if .Values.falco.disableCRIAsync }}
             - --disable-cri-async
             {{- end }}
             - -K
