prepare 0.2.5 with new outputs: cloudevents + webui
Signed-off-by: Issif <issif_github@gadz.org>

--- a/falcosidekick/templates/ingress-ui.yaml
+++ b/falcosidekick/templates/ingress-ui.yaml
@@ -1,24 +1,24 @@
-{{- if .Values.ingress.enabled -}}
+{{- if and .Values.webui.enabled .Values.webui.ingress.enabled -}}
 {{- $fullName := include "falcosidekick.fullname" . -}}
 ---
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: {{ $fullName }}-ui
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ include "falcosidekick.name" . }}
+    app.kubernetes.io/name: {{ include "falcosidekick.name" . }}-ui
     helm.sh/chart: {{ include "falcosidekick.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/instance: {{ .Release.Name }}-ui
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-  {{- with .Values.ingress.annotations }}
+  {{- with .Values.webui.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-{{- if .Values.ingress.tls }}
+{{- if .Values.webui.ingress.tls }}
   tls:
-  {{- range .Values.ingress.tls }}
+  {{- range .Values.webui.ingress.tls }}
     - hosts:
       {{- range .hosts }}
         - {{ . | quote }}
@@ -27,14 +27,14 @@ spec:
   {{- end }}
 {{- end }}
   rules:
-  {{- range .Values.ingress.hosts }}
+  {{- range .Values.webui.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
         {{- range .paths }}
           - path: {{ . }}
             backend:
-              serviceName: {{ $fullName }}
+              serviceName: {{ $fullName }}-ui
               servicePort: http
         {{- end }}
   {{- end }}
