--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -1,4 +1,6 @@
 {{- if eq .Values.config.existingSecret "" }}
+{{- $fullName := include "falcosidekick.fullname" . -}}
+---
 apiVersion: v1
 kind: Secret
 metadata:
@@ -161,4 +163,15 @@ data:
   KUBELESS_NAMESPACE: "{{ .Values.config.kubeless.namespace | b64enc }}"
   KUBELESS_PORT: "{{ .Values.config.kubeless.port | toString | b64enc }}"
   KUBELESS_MINIMUMPRIORITY: "{{ .Values.config.kubeless.minimumpriority | b64enc }}"
+  
+  # Cloud Events Output
+  CLOUDEVENTS_ADDRESS: "{{ .Values.config.cloudevents.address | b64enc }}"
+  CLOUDEVENTS_EXTENSION: "{{ .Values.config.cloudevents.extension | b64enc }}"
+  CLOUDEVENTS_MINIMUMPRIORITY: "{{ .Values.config.cloudevents.minimumpriority | b64enc }}"
+
+  # WebUI Output
+  {{- if .Values.webui.enabled -}}
+  {{ $weburl := printf "http://%s-ui:2802" (include "falcosidekick.fullname" .) }}
+  WEBUI_URL: "{{ $weburl | b64enc }}"
+  {{- end }}
 {{- end }}
