add retention argument (+ override temporary image.tag for CI)
Signed-off-by: Issif <issif_github@gadz.org>

--- a/falcosidekick/templates/deployment-ui.yaml
+++ b/falcosidekick/templates/deployment-ui.yaml
@@ -32,6 +32,7 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.webui.image.repository }}:{{ .Values.webui.image.tag }}"
           imagePullPolicy: {{ .Values.webui.image.pullPolicy }}
+          args: ["-r", "{{ .Values.webui.retention}}"]
           ports:
             - name: http
               containerPort: 2802
