eBPF proble path
Updates chart to include eBPF path override to enable setting the probe location.

Signed-off-by: jfarrell <jfarrell@apache.org>

--- a/falco/templates/daemonset.yaml
+++ b/falco/templates/daemonset.yaml
@@ -75,7 +75,7 @@ spec:
           env:
           {{- if .Values.ebpf.enabled }}
             - name: FALCO_BPF_PROBE
-              value:
+              value: {{ .Values.ebpf.path }}
           {{- end }}
           {{- if .Values.proxy.httpProxy }}
             - name: http_proxy
