--- a/falco/Chart.yaml
+++ b/falco/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: falco
-version: 1.7.2
+version: 1.7.3
 appVersion: 0.27.0
 description: Falco
 keywords:
@@ -19,6 +19,6 @@ maintainers:
     email: cncf-falco-dev@lists.cncf.io
 dependencies:
   - name: falcosidekick
-    version: "0.2.*"
+    version: "0.2.6"
     condition: falcosidekick.enabled
     repository: https://falcosecurity.github.io/charts
