Updating the location of the falco icon
The previous location specified for the icon is returning a 404
not found error. The new location is where the CNCF keeps the
artwork.

This was noticed on the artifact hub as it was no longer able to
pull the image.

Signed-off-by: Matt Farina <matt.farina@suse.com>

--- a/falco/Chart.yaml
+++ b/falco/Chart.yaml
@@ -11,7 +11,7 @@ keywords:
   - troubleshooting
   - run-time
 home: https://falco.org
-icon: https://falco.org/images/logos/falco-logo.png
+icon: https://raw.githubusercontent.com/cncf/artwork/master/projects/falco/horizontal/color/falco-horizontal-color.svg
 sources:
   - https://github.com/falcosecurity/falco
 maintainers:
