Add falco-exporter pod annontations
Signed-off-by: Carlos Panato <ctadeu@gmail.com>

--- a/falco-exporter/templates/daemonset.yaml
+++ b/falco-exporter/templates/daemonset.yaml
@@ -13,6 +13,10 @@ spec:
     metadata:
       labels:
         {{- include "falco-exporter.selectorLabels" . | nindent 8 }}
+      {{- if .Values.daemonset.annotations }}
+      annotations:
+      {{ toYaml .Values.daemonset.annotations | nindent 8 }}
+      {{- end }}
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
