all new output types added, version bumped to v0.3.0, falcosidekick version also bumped to v1.0.0, README updated according to new output types, CHANGELOG also updated with the new changes.
Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -75,6 +75,9 @@ data:
   AWS_SNS_MINIMUMPRIORITY: "{{ .Values.config.aws.sns.minimumpriority | b64enc }}"
   AWS_SQS_URL: "{{ .Values.config.aws.sqs.url | b64enc }}"
   AWS_SQS_MINIMUMPRIORITY: "{{ .Values.config.aws.sqs.minimumpriority | b64enc }}"
+  AWS_S3_BUCKET: "{{ .Values.config.aws.s3.bucket | b64enc }}"
+  AWS_S3_PREFIX: "{{ .Values.config.aws.s3.prefix | b64enc }}"
+  AWS_S3_MINIMUMPRIORITY: "{{ .Values.config.aws.s3.minimumpriority | b64enc }}"
 
   # SMTP Output
   SMTP_USER: "{{ .Values.config.smtp.user | b64enc }}"
@@ -100,6 +103,9 @@ data:
   GCP_PUBSUB_PROJECTID: "{{ .Values.config.gcp.pubsub.projectid | b64enc }}"
   GCP_PUBSUB_TOPIC: "{{ .Values.config.gcp.pubsub.topic | b64enc }}"
   GCP_PUBSUB_MINIMUMPRIORITY: "{{ .Values.config.gcp.pubsub.minimumpriority | b64enc }}"
+  GCP_STORAGE_BUCKET: "{{ .Values.config.gcp.storage.bucket | b64enc }}"
+  GCP_STORAGE_PREFIX: "{{ .Values.config.gcp.storage.prefix | b64enc }}"
+  GCP_STORAGE_MINIMUMPRIORITY: "{{ .Values.config.gcp.storage.minimumpriority | b64enc }}"
 
   # GoogleChat Output
   GOOGLECHAT_WEBHOOKURL: "{{ .Values.config.googlechat.webhookurl | b64enc }}"
@@ -163,11 +169,24 @@ data:
   KUBELESS_NAMESPACE: "{{ .Values.config.kubeless.namespace | b64enc }}"
   KUBELESS_PORT: "{{ .Values.config.kubeless.port | toString | b64enc }}"
   KUBELESS_MINIMUMPRIORITY: "{{ .Values.config.kubeless.minimumpriority | b64enc }}"
-  
+
+  # OpenFaaS
+  OPENFAAS_GATEWAYNAMESPACE: "{{ .Values.config.openfaas.gatewaynamespace | b64enc }}"
+  OPENFAAS_GATEWAYSERVICE: "{{ .Values.config.openfaas.gatewayservice | b64enc }}"
+  OPENFAAS_FUNCTIONNAME: "{{ .Values.config.openfaas.functionname | b64enc }}"
+  OPENFAAS_FUNCTIONNAMESPACE: "{{ .Values.config.openfaas.functionnamespace | b64enc }}"
+  OPENFAAS_GATEWAYPORT: "{{ .Values.config.openfaas.gatewayport | toString | b64enc }}"
+  OPENFAAS_MINIMUMPRIORITY: "{{ .Values.config.openfaas.minimumpriority | b64enc }}"
+
   # Cloud Events Output
   CLOUDEVENTS_ADDRESS: "{{ .Values.config.cloudevents.address | b64enc }}"
   CLOUDEVENTS_EXTENSION: "{{ .Values.config.cloudevents.extension | b64enc }}"
   CLOUDEVENTS_MINIMUMPRIORITY: "{{ .Values.config.cloudevents.minimumpriority | b64enc }}"
+
+  # RabbitMQ Output
+  RABBITMQ_URL: "{{ .Values.config.rabbitmq.url | b64enc}}"
+  RABBITMQ_QUEUE: "{{ .Values.config.rabbitmq.queue | b64enc}}"
+  RABBITMQ_MINIMUMPRIORITY: "{{ .Values.config.rabbitmq.minimumpriority | b64enc}}"
 
   # WebUI Output
   {{- if .Values.webui.enabled -}}
