fix for bucket name of s3, it should be empty
Signed-off-by: Batuhan Apaydın <batuhan.apaydin@trendyol.com>

--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -123,7 +123,7 @@ config:
       url: ""
       minimumpriority: ""
     s3:
-      bucket: "falcosidekick"
+      bucket: ""
       prefix: ""
       minimumpriority: ""
 
