fix falcosidekick statsd config in secret
Signed-off-by: Will Salt <williamejsalt@gmail.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -134,7 +134,8 @@ data:
   STAN_MINIMUMPRIORITY: "{{ .Values.config.stan.minimumpriority | b64enc }}"
 
   # Statsd
-  STATSD_FORESPACE: "{{ .Values.config.statsd.namespace | b64enc }}"
+  STATSD_FORWARDER: "{{ .Values.config.statsd.forwarder | b64enc }}"
+  STATSD_NAMESPACE: "{{ .Values.config.statsd.namespace | b64enc }}"
 
   # Dogstatsd
   DOGSTATSD_FORWARDER: "{{ .Values.config.dogstatsd.forwarder | b64enc }}"
